2022-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (WriteJPEGImage): Useful data_precision range is 8
	to 16.

	* magick/profile.c (ProfileImagePixels): Make sure not to use
	indexes if it is NULL.

	* magick/xwindow.c (MagickXDitherImage): Eliminate use of
	undefined behavior.  Make sure to deallocate memory upon error.

	* magick/widget.c (MagickXCommandWidget): Assure that prerequisite
	'number_selections' is satisfied.

	* magick/xwindow.c (MagickXGetWindowImage): Assure that
	prereqisite 'colors' table for PseudoClass case is satisifed.

	* coders/png.c (ReadOnePNGImage): Make sure that background index
	is initialized.

	* magick/profile.c (ProfileImagePixels): Don't de-reference
	indexes if they were not supplied.

	* magick/widget.c (MagickXColorBrowserWidget): If mode_info.text
	is NULL, ignore event due to user pushing mode button.

	* coders/heif.c (ReadMetadata): Also guard against profile name
	being null.

2022-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): Fix wrong use of
	LogWPGBitmapType2() macro, and resore previous definitions.

	* VisualMagick/magick/magick_types.h.in: Declare a ssize_t typedef
	in VisualStudio's <magick/magick_types.h> due to the unfortunate
	accidental use of ssize_t in Wand's MagickExtentImage()
	declaration.  This should address SourceForge issue #673 "visual
	studio include error ssize_t redefinition".

	Replace use of ReallocColormap() with previously existing
	ReallocateImageColormap(), which does the same thing.

	* coders/heif.c (ReadColorProfile): Support reading ICC color
	profile.

2022-11-20 Fojtik Jaroslav  <JaFojtik@yandex.com>

        coders/wpg.c Reveal more internal info to optional log.

2022-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/wmf/read.t: Change reference images from MIFF
	format to GIF format to reduce wasted space.

	* PerlMagick/t/cgm/read.t: Change from read.miff to read.gif to
	reduce wasted space.
