@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020221124"
-#define public MagickPackageReleaseDate "snapshot-20221124"
+#define public MagickPackageVersionAddendum ".020221125"
+#define public MagickPackageReleaseDate "snapshot-20221125"
