@@ -37,6 +37,17 @@
 </div>
 
 <div class="document">
+<p>2022-11-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>coders/jpeg.c (ReadJPEGImage): Eliminate Clang Analyzer
+diagnostic. Add support for reading deep gray images.</p></li>
+<li><p>magick/xwindow.c (MagickXDitherImage): Update documentation to
+add a link to an article about the HP Color Recovery algorithm.</p></li>
+<li><p>coders/topol.c (ReadTOPOLImage): Eliminate Clang Analyzer
+diagnostic.</p></li>
+</ul>
+</blockquote>
 <p>2022-11-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
